[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/character-sprite-sheets-pixel-art/3 SteamMan/SteamMan.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 13 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
SLOPE_STOP = 64.0
H_WEIGHT_GROUND = 0.8
H_WEIGHT_AIR = 0.1
H_WEIGHT_CROUCH = 0.9
RUN_SPEED = 80.0
CRAWL_SPEED = 20.0
JUMP_HEIGHT = 18.0
JUMP_TIME_TO_PEAK = 0.3
JUMP_TIME_TO_DESCENT = 0.28

[node name="Sprite_idle" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StandingShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Sprite_crouch" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 5 )
scale = Vector2( 1, 0.72 )
texture = ExtResource( 1 )

[node name="CrouchingShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 5 )
shape = SubResource( 2 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_right = 0.0

[node name="Tween" type="Tween" parent="Camera2D"]
